# ST-3

./: CMakeLists.txt
.github/workflows/: release.yml
src/: TimedDoor.cpp  TimedDoor.h  main.cpp
test/: tests.cpp
